--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver  
-url=jdbc:mysql://10.221.10.111:8080/db_zsl  
-username=demao  
-password=demao  
+url=jdbc:mysql://10.121.4.78:3306/smartas-km-zsj  
+username=admin  
+password=admin  
 #定义初始连接数  
 initialSize=0  
 #定义最大连接数  
