--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,14 +1,14 @@
-driver=com.mysql.jdbc.Driver  
-url=jdbc:mysql://10.121.4.78:3306/smartas-km-zsj  
-username=admin  
-password=admin  
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://10.121.4.78:3306/smartas-km-zsj
+jdbc.username=admin
+jdbc.password=admin
 #定义初始连接数  
-initialSize=0  
+jdbc.initialSize=0
 #定义最大连接数  
-maxActive=20  
+jdbc.maxActive=20
 #定义最大空闲  
-maxIdle=20  
+jdbc.maxIdle=20
 #定义最小空闲  
-minIdle=1  
+jdbc.minIdle=1
 #定义最长等待时间  
-maxWait=60000  
+jdbc.maxWait=60000
