--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.121.4.78:3306/smartas-km-zsj
+jdbc.url=jdbc:mysql://10.121.4.78:3306/runnoob
 jdbc.username=admin
 jdbc.password=admin
 #定义初始连接数  
